--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="com.putao.logshow.TestActivity">
 
     <LinearLayout
@@ -16,29 +17,50 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
-        <Button
-            android:id="@+id/add"
+        <EditText
+            android:id="@+id/et_packagename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="增"/>
+            android:hint="请输入包名"
+            android:textColor="@android:color/holo_red_light"/>
 
         <Button
-            android:id="@+id/delete"
-            android:layout_width="match_parent"
+            android:id="@+id/ok"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="删"/>
+            android:layout_gravity="center"
+            android:text="OK"/>
 
-        <Button
-            android:id="@+id/modify"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="改"/>
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/query"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="查"/>
+            <Button
+                android:id="@+id/add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="增"/>
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="删"/>
+
+            <Button
+                android:id="@+id/modify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="改"/>
+
+            <Button
+                android:id="@+id/query"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="查"/>
+
+        </LinearLayout>
 
         <ListView
             android:id="@+id/mylistview"
